--- a/play.html
+++ b/play.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Produced by Jitendra Kondru</h1>
 
-<h2 >A Woman of no Importance</h2>
-<h4>The Picture Gallery at Hunstanton_.  _Door at back leading on to
+<h2 class="name">A Woman of no Importance</h2>
+<h4 class="name">The Picture Gallery at Hunstanton_.  _Door at back leading on to
     terrace_</h4>
 
     <h6 class="illingworth" >LORD ILLINGWORTH.</h6> 
