Added table data

--- a/play.html
+++ b/play.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Produced by Jitendra Kondru</h1>
 
-<h2 class="name">A Woman of no Importance</h2>
+<h2 >A Woman of no Importance</h2>
 <h4 class="name">The Picture Gallery at Hunstanton_.  _Door at back leading on to
     terrace_</h4>
 
@@ -55,7 +55,38 @@
     <h6 class="allonby">MRS. ALLONBY.</h6> <p  class="speech"> We have been waiting for her in the Music-room, dear Lady
     Hunstanton.</p>
     
-
+    <table>
+        <tr>
+          <th>Character</th>
+          <th>Actor</th>
+          <th>Offer</th>
+        </tr>
+        <tr>
+          <td>ILLINGWORTH</td>
+          <td>Dwayne Johansson</td>
+          <td>$3 million dollars</td>
+        </tr>
+        <tr>
+          <td>Hunstanton</td>
+          <td>Scarlett Johansson</td>
+          <td>$500K dollars</td>
+        </tr>
+        <tr>
+          <td>Arbuthnot</td>
+          <td>Cameron Diaz</td>
+          <td>$500k dollars</td>
+        </tr>
+        <tr>
+          <td>Caroline</td>
+          <td>Jennifer Aniston</td>
+          <td>$500k dollars</td>
+        </tr>
+        <tr>
+            <td>Allonby</td>
+            <td>Angelina Jolie</td>
+            <td>$500k dollars</td>
+        </tr>
+      </table>
 
 
 </body>
