--- a/play.html
+++ b/play.html
@@ -89,7 +89,8 @@
             <td>$500k dollars</td>
         </tr>
       </table>
-
+<hr>
+<a href="play2.html">Go to Second Page</a>
 
 </body>
 
