--- a/play.html
+++ b/play.html
@@ -89,9 +89,16 @@
             <td>$500k dollars</td>
         </tr>
       </table>
+      <br>
 <hr>
 <a href="play2.html">Go to Second Page</a>
-
+<br>
+<ul class="navbar-horizontal">
+  <li> <a href="play.html">Home Page</a> </li>  
+  <li> <a href="play2.html">Second Page</a> </li>  
+  
+  </ul>
+   
 </body>
 
 </html>
