--- a/play2.html
+++ b/play2.html
@@ -17,7 +17,13 @@
     things women should never forgive.</p>
 <br>
 <a href="play.html">Back to the Other Page</a>
-
+<br>
+<ul class="navbar-horizontal">
+    <li> <a href="play.html">Home Page</a> </li>  
+    <li> <a href="play2.html">Second Page</a> </li>  
+    
+    </ul>
+     
 
 </body>
 </html>
