--- a/play.html
+++ b/play.html
@@ -3,11 +3,13 @@
 <head>
 <link rel="stylesheet" href="wilde.css">
     <title>Playing with css and html</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <h1>Produced by Jitendra Kondru</h1>
 
 <h2 >A Woman of no Importance</h2>
+<img src="https://www.lookandlearn.com/history-images/preview/U/U328/U328882_Mr-Oscar-Wildes-New-Play-A-Woman-of-No-Importance-at-the-Haymarket.jpg" alt="A woman of no importance" width="900" height="500">
 <h3>The Picture Gallery at Hunstanton_.  _Door at back leading on to
     terrace_</h3>
 
@@ -93,12 +95,21 @@
 <hr>
 <a href="play2.html">Go to Second Page</a>
 <br>
-<ul class="navbar-horizontal">
-  <li> <a href="play.html">Home Page</a> </li>  
-  <li> <a href="play2.html">Second Page</a> </li>  
+<br>
+<i class="material-icons icons">cloud</i>
+  <i class="material-icons icons">favorite</i>
+  <i class="material-icons icons">attachment</i>
+  <i class="material-icons icons">computer</i>
+  <i class="material-icons style="font-size:60px;color:lightblue;">traffic</i>
+  <br>
+  <br>
+  <br>
+<ul class="navbar">
+  <li class="navbar"> <a href="play.html">Home Page</a> </li>  
+  <li class="navbar"> <a href="play2.html">Second Page</a> </li>  
   
   </ul>
-   
+  
 </body>
 
 </html>
